--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"moment": "^2.18.1",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.44.3",
+		"react-native-action-button": "^2.8.0",
 		"react-native-call-detection": "^1.3.0",
+		"react-native-check-box": "^2.0.1",
 		"react-native-communications": "^2.2.1",
 		"react-native-cookies": "^3.2.0",
 		"react-native-fingerprint-scanner": "^2.1.3",
@@ -41,6 +43,7 @@
 		"react-native-svg": "~5.1.8",
 		"react-native-swipeout": "^2.1.5",
 		"react-native-vector-icons": "^4.2.0",
+		"react-native-xtabbar": "^0.2.1",
 		"react-redux": "^5.0.5",
 		"react-timer-mixin": "^0.13.3",
 		"redux": "^3.7.2",
