--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-native-fingerprint-scanner": "^2.1.3",
 		"react-native-getui": "^1.1.17",
 		"react-native-image-progress": "^1.0.1",
+		"react-native-keyboard-aware-scroll-view": "^0.3.0",
 		"react-native-looped-carousel": "^0.1.7",
 		"react-native-navigation": "^1.1.139",
 		"react-native-notifications": "^1.1.13",
