implement the Group Message functionality

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-sms')
     compile project(':react-native-camera')
     compile project(':react-native-cookies')
     compile project(':react-native-getui')
