--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 	"dependencies": {
 		"apsl-react-native-button": "^3.0.2",
 		"base-64": "^0.1.0",
-		"immutable": "^3.8.1",
+		"immutable": "^3.8.2",
 		"lodash": "^4.17.4",
-		"moment": "^2.18.1",
+		"moment": "^2.19.1",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.44.3",
 		"react-native-action-button": "^2.8.0",
@@ -29,27 +29,28 @@
 		"react-native-check-box": "^2.0.2",
 		"react-native-communications": "^2.2.1",
 		"react-native-cookies": "^3.2.0",
-		"react-native-fingerprint-scanner": "^2.1.3",
+		"react-native-fingerprint-scanner": "^2.2.1",
 		"react-native-getui": "^1.1.17",
 		"react-native-image-progress": "^1.0.1",
 		"react-native-keyboard-aware-scroll-view": "^0.3.0",
 		"react-native-looped-carousel": "^0.1.7",
-		"react-native-navigation": "^1.1.139",
+		"react-native-navigation": "^1.1.245",
 		"react-native-notifications": "^1.1.13",
 		"react-native-progress": "^3.3.0",
 		"react-native-push-notification": "^3.0.0",
 		"react-native-scrollable-tab-view": "^0.6.7",
-		"react-native-searchbar": "^1.11.0",
-		"react-native-signature-capture": "^0.4.6",
+		"react-native-searchbar": "^1.13.0",
+		"react-native-signature-capture": "^0.4.9",
 		"react-native-smart-pull-to-refresh-listview": "^1.6.10",
+		"react-native-sms": "^1.4.2",
 		"react-native-svg": "~5.1.8",
 		"react-native-swipeout": "^2.1.5",
-		"react-native-vector-icons": "^4.2.0",
+		"react-native-vector-icons": "^4.4.2",
 		"react-native-xtabbar": "^0.2.1",
 		"react-redux": "^5.0.5",
 		"react-timer-mixin": "^0.13.3",
 		"redux": "^3.7.2",
-		"redux-immutable-state-invariant": "^2.0.0",
+		"redux-immutable-state-invariant": "^2.1.0",
 		"redux-immutablejs": "0.0.8",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.2.0",
@@ -59,12 +60,12 @@
 	},
 	"devDependencies": {
 		"babel-eslint": "^7.2.3",
-		"eslint": "^4.3.0",
-		"eslint-plugin-babel": "^4.1.2",
-		"eslint-plugin-react": "^7.1.0",
-		"eslint-plugin-react-native": "^3.0.1",
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "3.0.2",
+		"eslint": "^4.9.0",
+		"eslint-plugin-babel": "^4.1.2",
+		"eslint-plugin-react": "^7.4.0",
+		"eslint-plugin-react-native": "^3.0.1",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.6"
 	},
